--- a/SqlCipherSpeed/SqlCipherSpeed.iOS/SqlCipherSpeed.iOS.csproj
+++ b/SqlCipherSpeed/SqlCipherSpeed.iOS/SqlCipherSpeed.iOS.csproj
@@ -189,8 +189,8 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.469394-pre1" />
+    <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.135-pre" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SqlCipherSpeed\SqlCipherSpeed.csproj">
