--- a/SqlCipherSpeed/SqlCipherSpeed/SqlCipherSpeed.csproj
+++ b/SqlCipherSpeed/SqlCipherSpeed/SqlCipherSpeed.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.469394-pre1" />
+    <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.135-pre" />
   </ItemGroup>
 
 </Project>
